Updated website content and replaced old code

--- a/omema project/style.css
+++ b/omema project/style.css
@@ -75,13 +75,16 @@ body {
 }
 
 .img img {
-  width: 25rem;
+  width: 33rem;
   height: auto;
   border-radius: 15px;
   border: 2px solid #5C4033;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
 }
-
+.img{
+  width: 45rem;
+  height: auto;
+}
 .img img:hover {
   transform: scale(1.03);
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
